# DocModifier

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  _debug_node.py  app.py  doc_proc.py  docker-compose.yml  example.docx  example_document.docx  pyproject.toml  requirements.txt  ~$ample_document.docx
core/: __init__.py  docx_modifier.py  docx_utils.py  graph_nodes.py  llm_handler.py  llm_invoker.py  prompts.py  state.py
core/docx_operations/: __init__.py  element_operations.py  table_operations.py  text_operations.py
